css/index.css
.center {
  text-align: center;
}
.radius {
  border-radius: 20px;
}
.test {
  border: 1px solid black;
}
html,
body {
  height: 100%;
  font-size: 65.5%;
}
html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
  margin: 0;
  padding: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  box-sizing: border-box;
  max-width: 100%;
  font-size: 1.6rem;
  text-decoration: none;
  color: black;
}
.container,
.container2 {
  width: 60%;
  max-width: 1000px;
  margin: 0 auto;
}
@media (max-width: 500px) {
  .container,
  .container2 {
    width: 90%;
  }
}
.container h1,
.container2 h1,
.container h2,
.container2 h2,
.container h3,
.container2 h3 {
  text-align: center;
}
h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: 'Public Sans', sans-serif;
}
p,
a {
  font-family: 'Open Sans', sans-serif;
}
h1 {
  font-size: 1.7rem;
}
footer {
  border: 2px solid #FF6A22;
  padding: 2% 0;
  border-radius: 20px;
  height: 20%;
}
footer h2 {
  margin-bottom: 2%;
  font-size: 1.3rem;
}
footer .contact {
  width: 55%;
  padding-left: 5%;
  margin: 0 auto;
}
footer .contact a img {
  border-radius: 20px;
  height: 10vh;
  margin-right: 5%;
}
.container2 .nav-section .nav-div {
  position: fixed;
  top: 0;
  background-color: white;
  width: 60%;
  opacity: 0.9;
}
@media (max-width: 500px) {
  .container2 .nav-section .nav-div {
    margin: 0 auto;
    width: 90%;
  }
}
.container2 .nav-section .nav-logo {
  padding-top: 1%;
}
.container2 .nav-section .nav-logo .logo1 {
  height: 15vh;
}
@media (max-width: 500px) {
  .container2 .nav-section .nav-logo .logo1 {
    height: 10vh;
  }
}
.container2 .nav-section div {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
}
@media (max-width: 500px) {
  .container2 .nav-section div {
    display: flex;
    justify-content: space-between;
    align-items: center;
  }
}
.container2 .nav-section div .nav-textarea {
  border-radius: 20px;
  padding: 2%;
  background-color: #FF6A22;
}
@media (max-width: 500px) {
  .container2 .nav-section div .nav-textarea {
    width: 40%;
  }
}
.container2 .nav-section div textarea {
  width: 100%;
}
.container2 .nav-section .nav-hamburger {
  padding-top: 2%;
}
.container2 .nav-section .nav-hamburger .hamburger {
  width: 3vw;
}
@media (max-width: 500px) {
  .container2 .nav-section .nav-hamburger .hamburger {
    width: 7vw;
  }
}
.container2 .nav-section nav {
  width: 100%;
  margin: 0 auto;
  margin-bottom: 2%;
  display: flex;
  justify-content: space-evenly;
  align-items: center;
}
.container2 .nav-section nav a {
  color: #FF6A22;
  font-size: 1.3rem;
}
@media (max-width: 500px) {
  .container2 .nav-section nav a {
    font-size: 0.8rem;
  }
}
.micro-container {
  background-color: #FF6A22;
  border: 2px solid #FF6A22;
  border-radius: 20px;
  margin-bottom: 2%;
}
.container h1 {
  margin-bottom: 1%;
  color: #FF6A22;
}
.container .landing-middle {
  display: flex;
  justify-content: space-evenly;
  align-items: none;
}
.container .landing-middle div {
  border: 2px solid white;
  border-radius: 20px;
  width: 30%;
  background-color: #a53700;
  padding: 2%;
}
.container .landing-middle div h3 {
  color: white;
  margin-bottom: 2%;
}
.container .landing-middle div p {
  text-align: center;
  color: #dfdfdf;
  font-size: 1.2rem;
}
.container .landing-h2-div {
  margin: 2% auto;
}
.container .exercise-div img {
  border-radius: 20px;
}
.container .logo-div {
  margin: auto;
  width: 100%;
  display: flex;
  justify-content: space-evenly;
  align-items: center;
}
.container .logo-div a {
  text-align: center;
  font-size: 1rem;
  width: 20%;
}
@media (max-width: 500px) {
  .container .logo-div a {
    font-size: 0.9rem;
  }
}
.container .logo-div div {
  width: 30%;
  margin: 0 5%;
}
.container .logo-div div img {
  margin: 0 auto;
  width: 100vw;
}
.container .landing-middle {
  text-align: center;
  margin: 0 auto;
  width: 95%;
}
.container .landing-middle div {
  width: 32%;
}
@media (max-width: 500px) {
  .container .landing-middle div {
    width: 46%;
  }
}
@media (max-width: 500px) {
  .container .landing-middle .index-classes {
    display: none;
  }
}
.container .sign-up-section {
  width: 95%;
  margin: 0 auto;
}
.container .sign-up-section img {
  border-radius: 20px;
  width: 15vw;
}
@media (max-width: 500px) {
  .container .sign-up-section img {
    display: none;
  }
}
.container .sign-up-section .sign-up-div {
  display: flex;
  justify-content: space-evenly;
  align-items: none;
}
.container .sign-up-section .sign-up {
  text-align: center;
  border-radius: 20px;
  margin: 0 auto;
  background-color: white;
  width: 30%;
  padding: 2%;
}
@media (max-width: 500px) {
  .container .sign-up-section .sign-up {
    width: 60%;
    margin-bottom: 2%;
  }
}
.container .sign-up-section .sign-up textarea {
  width: 90%;
}
.container .sign-up-section .sign-up h4 {
  font-size: 1.3rem;
  color: #FF6A22;
}
.container .sign-up-section .next {
  border: 1px solid #FF6A22;
  border-radius: 20px;
  margin: 2% auto;
  width: 45%;
  background-color: #FF6A22;
  padding-bottom: 1%;
  text-align: center;
  font-size: 0.9rem;
}
.container .sign-up-section .next img {
  width: 2.2vh;
}
.container .sign-up-section p {
  border: 2px solid white;
  border-radius: 20px;
  background-color: #a53700;
  color: white;
  margin: 2% auto;
  text-align: center;
  padding: 4%;
}
@media (max-width: 500px) {
  .container .sign-up-section p {
    display: none;
  }
}
.container2 {
  margin-top: 10%;
}
@media (max-width: 500px) {
  .container2 {
    margin-top: 20%;
  }
}
.container2 .micro-container {
  border: 2px solid #a53700;
  border-radius: 20px;
}
.container2 .micro-container img {
  border-radius: 20px;
}
.container2 .micro-container h2 {
  margin: 1% auto;
  color: white;
}
@media (max-width: 500px) {
  .container2 .micro-container h2 {
    font-size: 1.3rem;
  }
}
.container2 .micro-container h3 {
  font-size: 1.2rem;
  color: #a53700;
}
@media (max-width: 500px) {
  .container2 .micro-container h3 {
    font-size: 1rem;
  }
}
.container2 .micro-container h3 img {
  width: 1.3vw;
}
@media (max-width: 500px) {
  .container2 .micro-container h3 img {
    width: 3vw;
  }
}
.container2 .micro-container .class-section {
  border-top: 2px solid white;
  border-bottom: 2px solid white;
  padding: 2% 1%;
  width: 90%;
  margin: 0 auto;
  display: flex;
  justify-content: space-between;
  align-items: center;
}
@media (max-width: 500px) {
  .container2 .micro-container .class-section {
    width: 100%;
  }
}
.container2 .micro-container .class-section img {
  width: 2vw;
}
@media (max-width: 500px) {
  .container2 .micro-container .class-section img {
    width: 7vw;
  }
}
.container2 .micro-container .class-section .class,
.container2 .micro-container .class-section .class2 {
  border-radius: 20px;
  background-color: white;
  border: 1px solid black;
  width: 20%;
}
.container2 .micro-container .class-section .class .class-image-div,
.container2 .micro-container .class-section .class2 .class-image-div {
  margin: 0 auto;
  width: 90%;
  margin-top: 2%;
}
.container2 .micro-container .class-section .class .class-image-div img,
.container2 .micro-container .class-section .class2 .class-image-div img {
  width: 10vw;
}
@media (max-width: 500px) {
  .container2 .micro-container .class-section .class .class-image-div img,
  .container2 .micro-container .class-section .class2 .class-image-div img {
    width: 30vw;
  }
}
.container2 .micro-container .class-section .class h4,
.container2 .micro-container .class-section .class2 h4 {
  text-align: center;
  font-size: 1rem;
}
.container2 .micro-container .class-section .class h5,
.container2 .micro-container .class-section .class2 h5 {
  text-align: center;
  font-size: 0.8rem;
}
.container2 .micro-container .class-section .class .stars-div,
.container2 .micro-container .class-section .class2 .stars-div {
  margin: 0 auto;
  width: 80%;
}
.container2 .micro-container .class-section .class .stars-div img,
.container2 .micro-container .class-section .class2 .stars-div img {
  width: 9vw;
}
@media (max-width: 500px) {
  .container2 .micro-container .class-section .class .stars-div img,
  .container2 .micro-container .class-section .class2 .stars-div img {
    width: 25vw;
  }
}
@media (max-width: 500px) {
  .container2 .micro-container .class-section .class2 {
    display: none;
  }
}
@media (max-width: 500px) {
  .container2 .micro-container .class-section .class {
    width: 40%;
  }
}
.container2 .micro-container .home-class-section3 {
  margin-top: 2%;
}
.container2 .micro-container .home-class-section3 h3 {
  color: white;
  font-size: 1.6rem;
  margin-bottom: 2%;
}
@media (max-width: 500px) {
  .container2 .micro-container .home-class-section3 h3 {
    font-size: 1.2rem;
  }
}
.container2 .micro-container .exercise3 {
  margin-top: 2%;
  bottom: 0;
}

